[gd_scene load_steps=15 format=3 uid="uid://dk5n7gglkk0k5"]

[ext_resource type="Script" uid="uid://cwk4qbp01syqx" path="res://scripts/MainMenu/in_game_menu.gd" id="1_0cve7"]
[ext_resource type="Shader" uid="uid://8wg2iwar8qby" path="res://shaders/pantheon_sky_stars.gdshader" id="2_q5csu"]
[ext_resource type="FontFile" uid="uid://me757ermgvb3" path="res://assets/ui/Ithaca-LVB75.ttf" id="3_0rq4b"]
[ext_resource type="Shader" uid="uid://gnqa13nboi10" path="res://shaders/glare.gdshader" id="3_efgmv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0rq4b"]
shader = ExtResource("2_q5csu")
shader_parameter/bg_color = Vector4(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q5csu"]
bg_color = Color(0.0207, 0.142792, 0.23, 0.321569)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.0206647, 0.0936375, 0.1598, 1)
border_blend = true
corner_radius_top_left = 27
corner_radius_top_right = 27
corner_radius_bottom_right = 27
corner_radius_bottom_left = 27
shadow_color = Color(0.0171806, 0.0721362, 0.104602, 0.454902)
shadow_size = 5

[sub_resource type="Theme" id="Theme_0rq4b"]
Panel/styles/panel = SubResource("StyleBoxFlat_q5csu")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_r4chg"]
shader = ExtResource("3_efgmv")
shader_parameter/base_color = Color(0.921675, 0.767929, 1, 1)
shader_parameter/flame_color = Color(0.763553, 0.84492, 0.937124, 1)
shader_parameter/speed = 3.0
shader_parameter/noise_scale = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0rq4b"]
content_margin_bottom = 4.0
bg_color = Color(0.0588235, 0.0588235, 0.0588235, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.8, 0.8, 0.8, 0.321569)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color(0.0392157, 0, 0.333333, 0.4)
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_efgmv"]
content_margin_bottom = 4.0
bg_color = Color(0.0588235, 0.0588235, 0.0588235, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.8, 0.8, 0.8, 0.321569)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color(0.0392157, 0, 0.333333, 0.4)
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r4chg"]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0.0588235, 0.0588235, 0.0588235, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.8, 0.8, 0.8, 0.321569)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color(0.0392157, 0, 0.333333, 0.4)
shadow_size = 3

[sub_resource type="Animation" id="Animation_q5csu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MenuContainer/Button_Continue:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_0cve7"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.105, 1),
"update": 0,
"values": [Vector2(0, -20), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0rq4b"]
_data = {
&"RESET": SubResource("Animation_q5csu"),
&"fade_in": SubResource("Animation_0cve7")
}

[node name="InGameMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0cve7")

[node name="Panel" type="Panel" parent="."]
material = SubResource("ShaderMaterial_0rq4b")
layout_mode = 1
anchors_preset = -1
anchor_left = 0.35
anchor_top = 0.3
anchor_right = 0.65
anchor_bottom = 0.7
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_0rq4b")

[node name="MenuContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.5
offset_top = -46.5
offset_right = 55.5
offset_bottom = 46.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="MenuContainer"]
material = SubResource("ShaderMaterial_r4chg")
layout_mode = 2
theme_override_fonts/font = ExtResource("3_0rq4b")
theme_override_font_sizes/font_size = 32
text = "Пауза"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button_Continue" type="Button" parent="MenuContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_0rq4b")
theme_override_font_sizes/font_size = 28
theme_override_styles/focus = SubResource("StyleBoxFlat_0rq4b")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_0rq4b")
theme_override_styles/hover = SubResource("StyleBoxFlat_0rq4b")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0rq4b")
theme_override_styles/normal = SubResource("StyleBoxFlat_0rq4b")
text = "Продолжить"

[node name="Button_Save" type="Button" parent="MenuContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_0rq4b")
theme_override_font_sizes/font_size = 28
theme_override_styles/focus = SubResource("StyleBoxFlat_0rq4b")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_0rq4b")
theme_override_styles/hover = SubResource("StyleBoxFlat_0rq4b")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0rq4b")
theme_override_styles/normal = SubResource("StyleBoxFlat_efgmv")
text = "Сохранить"

[node name="Button_Quit" type="Button" parent="MenuContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_0rq4b")
theme_override_font_sizes/font_size = 28
theme_override_styles/focus = SubResource("StyleBoxFlat_0rq4b")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_0rq4b")
theme_override_styles/hover = SubResource("StyleBoxFlat_0rq4b")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0rq4b")
theme_override_styles/normal = SubResource("StyleBoxFlat_r4chg")
text = "В главное меню"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
&"": SubResource("AnimationLibrary_0rq4b")
}

[connection signal="pressed" from="MenuContainer/Button_Continue" to="." method="_on_button_continue_pressed"]
[connection signal="pressed" from="MenuContainer/Button_Save" to="." method="_on_button_save_pressed"]
[connection signal="pressed" from="MenuContainer/Button_Quit" to="." method="_on_button_quit_pressed"]
